# Bitpoll

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README  README.hi.md  README.md  compose.yaml  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  requirements-production.in  requirements-production.txt  requirements.in  requirements.txt  setup.cfg  setup.py
.github/workflows/: build_image.yml
bitpoll/: settings.py  settings_local.docker.py  settings_local.py  settings_local.sample.py  urls.py  wsgi.py
bitpoll/base/: admin.py  apps.py  autocomplete.py  forms.py  models.py  openid.py  urls.py  validators.py  views.py
bitpoll/caldav/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
bitpoll/groups/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
bitpoll/invitations/: admin.py  apps.py  models.py  urls.py  views.py
bitpoll/poll/: admin.py  apps.py  forms.py  models.py  spam_util.py  tests.py  urls.py  util.py  views.py
bitpoll/registration/: forms.py  urls.py  views.py
docker_files/: run  uwsgi-bitpoll.ini
docker_files/config/: settings.py
docker_files/nginx/: nginx.conf
docs/te/: README.md
dudel/: settings.py  settings.py.example  settings_local.py  urls.py  wsgi.py
dudel/base/: admin.py  autocomplete.py  forms.py  models.py  urls.py  views.py
dudel/groups/: admin.py  forms.py  models.py  signals.py  views.py
dudel/invitations/: models.py  urls.py  views.py
dudel/poll/: admin.py  apps.py  forms.py  models.py  urls.py  util.py  views.py
dudel/registration/: forms.py  models.py  (+2 more)
(+275 files in other folders)
