[project]
name = "bitpoll"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "caldav>=2.2.3",
    "django>=5.0",
    "django-auth-ldap>=5.3.0",
    "django-encrypted-model-fields>=0.6.5",
    "django-friendly-tag-loader>=1.3.2",
    "django-markdownify>=0.9.6",
    "django-pipeline>=4.1.0",
    "django-simple-csp>=0.5.dev1",
    "django-spectre-css>=0.3.dev1",
    "django-token-bucket>=0.2.2",
    "django-widget-tweaks>=1.5.0",
    "icalendar>=6.3.2",
    "libsasscompiler>=0.1.9",
    "psycopg2-binary>=2.9.11",
    "pytz>=2025.2",
    "sentry-sdk>=2.48.0",
    "simple-openid-connect[django]>=2.3.2",
]
