[metadata]
name = bitpoll
version = 0.9
description = Web application for scheduling meetings and general polling
long_description = file: README.md
license = GPLv3
classifiers =
    Environment :: Web Environment
    Framework :: Django
    License :: OSI Approved :: GNU General Public License Version 3
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    django>=2.0.0,<2.3
    django-widget-tweaks
    django-markdown-app
    pytz
    django-simple-csp
    libsasscompiler
    django-pipeline
    django-friendly-tag-loader
    django-encrypted-model-fields
    caldav
    icalendar
    django-token-bucket>=0.2.2
